--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
-p { 
-	color: brown;
+body {
+  margin: 0 auto;
+  max-width: 50em;
+	font-family: 'Helvetica', 'Arial', sans-serif;
+	line-height: 1.5;
+  padding: 4em 1em;
+	color: #555;
 }
 h1 {
-	color: blue;
+  margin-top: 1em;
+  padding-top: 1em;
+	color: #333;
 }
 h2 {
-	color: brown;
-}
-li {
-	color: violet;
+  margin-top: 1em;
+  padding-top: 1em;
+	color: #333;
 }
